--- a/machine.html
+++ b/machine.html
@@ -59,13 +59,18 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/319d8b84-ceec-4d9c-97c7-5a5b89de60d8'>thredUP - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/319d8b84-ceec-4d9c-97c7-5a5b89de60d8'>thredUP - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://so1.join.com/jobs/258010-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://mtailor.workable.com/jobs/1082596/candidates/new'>Jobs: ML (Machine Learning) and Backend Engineer ... - MTailor</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... Apply online for the job of ML (Machine Learning) and Backend Engineer at 
+MTailor.</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/lightmatter/3078e929-7571-4ab5-b2df-b22aef74838c'>Lightmatter - Machine Learning Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -84,7 +89,7 @@
 <p>Jul 13, 2019 ... Machine Learning Engineer. S?o Paulo. Engineering ? Data Engineering. Full-
 time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/2ece8233-3052-4734-b730-41625dfada42/apply'>thredUP - Staff Machine Learning Engineer - Core Algorithms</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/2ece8233-3052-4734-b730-41625dfada42/apply'>thredUP - Staff Machine Learning Engineer - Core Algorithms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 13, 2019 ... Staff Machine Learning Engineer - Core Algorithms. Remote. Engineering ? 
 Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</p>
@@ -206,7 +211,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/81d32142-4839-40e3-a84f-ee98dd2a5d53'>Aptiv-Mobility - Machine Learning Engineer - Autonomous Driving</a></h5> 
+<h5><a href='https://jobs.lever.co/aptiv-mobility/81d32142-4839-40e3-a84f-ee98dd2a5d53'>Aptiv-Mobility - Machine Learning Engineer - Autonomous Driving</a></h5> 
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -231,11 +236,11 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://riskmethods.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d) - Apply online</a></h5> 
+<h5><a href='https://riskmethods.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -264,7 +269,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p>3 days ago ... Apply online for the job of Machine Learning / AI / Big Data Engineer, Athens at 
 Atypon Systems.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/shopee/jobs/4008815002'>Job Application for Data Scientist - Language Service/ Machine Learning Platform at Shopee</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopee/jobs/4008815002'>Job Application for Data Scientist - Language Service/ Machine Learning Platform at Shopee</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -274,7 +279,7 @@ Atypon Systems.</p>
 Learning Engineer in Tech-Startup in Berlin (published: 11.07.2019). Apply now 
 or?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/ttt-machine-learning-ai-azure-cognitive-azure-ml-python-senior-90059'>TTT - Machine Learning /AI (Azure Cognitive/Azure ML/Python ...</a></h5> 
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/ttt-machine-learning-ai-azure-cognitive-azure-ml-python-senior-90059'>TTT - Machine Learning /AI (Azure Cognitive/Azure ML/Python ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As a member of EY's core Tax practice, you'll develop a deep tax technical 
 knowledge and outstanding database, data analytics and programming skills.</p>
@@ -308,7 +313,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ava/b5801683-d955-4c8f-bbb7-1012a3b83adf'>Ava - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ava/b5801683-d955-4c8f-bbb7-1012a3b83adf'>Ava - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Interested to learn more about it? Let's chat. Especially if: - Research experience 
 in algorithms and specifically Machine Learning (including Deep Learning).</p>
@@ -350,7 +355,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light">Mc Lean, VA Mc Lean, VA Mc Lean, VA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='http://llamasoft.applytojob.com/apply/N5i4zgsKml/Sr-Machine-Learning-Scientist'>Sr. Machine Learning Scientist - LLamasoft - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://llamasoft.applytojob.com/apply/N5i4zgsKml/Sr-Machine-Learning-Scientist'>Sr. Machine Learning Scientist - LLamasoft - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -419,7 +424,7 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tri-ad/618b74a5-4e66-434e-8e20-65a8a646b0b7'>TRI-AD, Inc - Machine Learning Engineer for Computer Vision</a></h5> 
+<h5><a href='https://jobs.lever.co/tri-ad/618b74a5-4e66-434e-8e20-65a8a646b0b7'>TRI-AD, Inc - Machine Learning Engineer for Computer Vision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -433,7 +438,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://oneinamil.workable.com/j/00BAFA4E39'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oneinamil.workable.com/j/00BAFA4E39'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -463,12 +468,8 @@ sizes, and allows our customers to view and analyze their foot-traffic data. We'
 <p>Jul 2, 2019 ... MSK Data Products is a multidisciplinary team of designers, software engineers 
 and data scientists working inside MSK. Our mission is to transform how?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4354328002'>Job Application for Manager, Applied Machine Learning  at WeWork Global Technology</a></h5> 
+<h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4354328002'>Job Application for Manager, Applied Machine Learning  at WeWork Global Technology</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
-<p>Posted on: 2019-07-12</p>
-<hr/>
-<h5><a href='https://mercari.workable.com/j/2EAFD9370C'>Mercari, inc. - Jobs: Software Engineer, Machine Learning [Internship] - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
 
